fix: - wrap homepage in full layout

--- a/containers/Home/Blog/styles.module.scss
+++ b/containers/Home/Blog/styles.module.scss
@@ -1,7 +1,7 @@
 @import 'styles/utils/mixins';
 
 .blog {
-  padding: $section-indent 55px;
+  padding: $section-indent 0;
   background-color: $white;
 
   @include flex(column, flex-start, center);
@@ -11,11 +11,11 @@
   }
 
   @include tablet {
-    padding: $section-indent 25px;
+    padding: $section-indent 0;
   }
 
   @include phone {
-    padding: #{$mobile-section-indent} $side-indent;
+    padding: #{$mobile-section-indent} 0;
 
     & > div:first-child {
       margin-bottom: -$after-mobile-title-margin + 20px;
